<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieCatalog</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu egestas sem. Integer nulla nisi, lacinia et elit in, sagittis dapibus lorem. Aenean vitae mauris libero. Pellentesque mauris est, molestie non feugiat in, fermentum vitae enim. Nunc metus ante, vestibulum malesuada elementum vestibulum, lobortis sit amet mi. Vivamus nec neque porttitor, vulputate dolor vel, bibendum urna. Maecenas porttitor pellentesque varius. Sed tellus urna, vehicula et tincidunt et, suscipit vitae neque. Maecenas malesuada justo vel elementum euismod. Suspendisse diam diam, rutrum vitae neque sit amet, convallis ultricies massa. Aliquam vel ante ullamcorper, imperdiet magna quis, cursus leo. Morbi suscipit risus eu purus pharetra, et consectetur purus varius. Donec vehicula ipsum vitae elit eleifend, vel cursus tortor aliquam. In blandit ipsum eget ipsum eleifend hendrerit a non quam. Integer sed est porttitor, luctus lectus eu, adipiscing tellus.
Cras consequat laoreet ante, malesuada scelerisque sapien faucibus quis. Nulla elit erat, lobortis sed aliquet ac, tincidunt non lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent consequat, nunc vel interdum posuere, nibh metus venenatis justo, vel sodales ligula ante ullamcorper sem. Donec non tempus nisi, vel molestie nisl. Praesent ac nisi sodales, mollis massa quis, gravida est. Donec feugiat mattis dignissim. Aenean eros dolor, sollicitudin et lorem imperdiet, fringilla malesuada purus. Vivamus cursus consequat orci vitae dignissim. Aliquam rutrum aliquet convallis. Vestibulum dapibus, nisl nec cursus pharetra, sem urna feugiat lorem, sit amet vestibulum metus enim eu metus. Etiam vestibulum convallis nulla ut iaculis.
Fusce in risus sit amet urna hendrerit lacinia. Aenean at ligula est. Nullam lobortis quis nisi nec rutrum. Ut luctus dapibus dui at interdum. Nullam molestie aliquam orci a sodales. Phasellus eget tempor tortor, nec tempus neque. Vestibulum gravida lacinia luctus. Nunc purus lorem, sagittis pulvinar libero et, auctor dictum augue. Mauris non ligula ut metus sollicitudin sagittis. Donec porttitor, turpis vestibulum suscipit vestibulum, nunc eros convallis risus, ac facilisis turpis elit non est. Donec a erat vel odio elementum hendrerit. Morbi non nunc eget magna sagittis pretium. Nullam facilisis ultricies ligula in rutrum. Nunc sit amet augue molestie erat elementum tincidunt.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_ipsum_super_short">Lorem ipsum dolor</string>
    <string name="detail_page_image_description">This is the movie picture</string>
    <string name="detail_page_date_string">Date:</string>
    <string name="lorem_ipsum">Phasellus et metus luctus, rutrum libero vitae, commodo nunc. Mauris lectus turpis, iaculis nec turpis vitae, lobortis bibendum risus. Phasellus sollicitudin dignissim varius. Nullam sodales vehicula ipsum nec tincidunt. Mauris at libero justo. In id lectus ipsum. Donec in fermentum augue. Etiam semper nibh id convallis elementum. Duis aliquam in lacus at ornare. Aenean fermentum, dui vel dignissim egestas, justo sem fringilla justo, id aliquet tortor leo fermentum diam. Cras elit quam, lobortis congue arcu sit amet, mattis aliquet nibh. Donec lobortis, est eget sollicitudin vulputate, diam magna tincidunt dui, ut sagittis lectus libero nec erat.</string>
    <string name="lorem_ipsum2">Nullam sed lobortis risus. Morbi ullamcorper vestibulum nunc eu feugiat. Vestibulum ultricies tempor diam, non mollis diam cursus nec. Proin ac euismod elit, sed porttitor arcu. Maecenas convallis sed massa et blandit. Etiam aliquet nisi quam, a congue urna blandit vitae. Sed posuere rutrum lacus, quis euismod dolor elementum quis. Aenean at fermentum leo. Suspendisse condimentum enim sed dolor porta, in egestas urna iaculis. Pellentesque convallis pretium vestibulum. Fusce id nisi a urna pretium eleifend.</string>
    <string name="lorem_ipsum3">Nunc at erat non risus pulvinar mattis. Nam massa dolor, cursus vitae ullamcorper eget, vehicula vitae mi. Sed quis feugiat dolor, nec blandit ante. Phasellus vel ligula et ante adipiscing congue vitae non tellus. Pellentesque auctor leo vitae mi tempor, at convallis nisl molestie. Aenean eu libero enim. Aenean vitae faucibus augue. Nulla blandit odio quis lorem imperdiet, nec ultricies nisl sodales.</string>

</resources>