<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPageActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/one"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lorem_ipsum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/two"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lorem_ipsum2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/three"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lorem_ipsum3" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>